--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-table-component",
+  "name": "geeklearners-vue-table",
   "version": "1.0.0",
   "description": "Table Component for vue js",
   "main": "index.js",
